/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package practicaherencia;

/**
 *
 * @author PACO
 */
public class GPS {

    //atributos
    
    public String darUbicacion(){
        return "Cáceres";
    }

}
